# data-prep-for-machine-learning-python

./: .gitignore  README.md  pyproject.toml
notebooks/1 Import & Clean Data/: Import and Clean - 1 Import & Filter Data - Student Version.ipynb  Import and Clean - 1 Import & Filter Data.ipynb  Import and Clean - 2 Data Validation - Student Version.ipynb  Import and Clean - 2 Data Validation.ipynb  Import and Clean - 3 Cleaning Data and Imputation - Student Version.ipynb  Import and Clean - 3 Cleaning Data and Imputation.ipynb
notebooks/2 EDA/: EDA - 1 Single Variable Analysis-Student.ipynb  EDA - 1 Single Variable Analysis.ipynb  EDA - 2 Multiple Variable Analysis-Student.ipynb  EDA - 2 Multiple Variable Analysis.ipynb
notebooks/3 Train Test Split/: Training & Testing - 1 - Train Test Split - Student Copy.ipynb
notebooks/4 Feature Engineering/: Feature Engineering - 1a One Hot Encoding - Student Version.ipynb  Feature Engineering - 1a One Hot Encoding.ipynb  Feature Engineering - 1b GetDummies Vs OneHotEncoder.ipynb  Feature Engineering - 2a Transformations - Student Version.ipynb  Feature Engineering - 2a Transformations.ipynb  Feature Engineering - 3a Outliers - Student Version.ipynb  Feature Engineering - 3a Outliers.ipynb  Feature Engineering - 4a Binning - Student Version.ipynb  Feature Engineering - 4a Binning.ipynb  Feature Engineering - 4b Final thought on Binning.ipynb  Feature Engineering - 5a Scaling - Student Version.ipynb  Feature Engineering - 5a Scaling.ipynb
notebooks/5 Feature Selection/: Feature Selection - 1 - Manual Methods.ipynb  (+4 more)
(+22 files in other folders)
