[tool.poetry]
name = "dpfml"
version = "0.1.0"
description = "Data Prep for Machine Learning in Python"
authors = ["Abrar Mudhir <abrarmudhir@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
